--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <html>
     <head>
         <title>Rankin 101</title>
-        <link href="aboutme.css" rel="stylesheet">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="style.css" rel="stylesheet">
     </head>
     <body>
         <h1 class="title"><center>Rankin 101</center></h1>
