--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         <li>tv show: bojack horseman</li>
                         <li>band: don caballero</li>
                         <li>album: a forest of polarity by rooftops</li>
-                        <li>song: sea frality by rooftops</li>
+                        <li>song: sea frailty by rooftops</li>
                         <li>instrument: guitar, drums</li>
                         <li>prehistoric time period: triassic</li>
                         <li>animal: orca</li>
