--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <head>
         <title>Rankin 101</title>
         <link href="style.css" rel="stylesheet">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <h1 class="title"><center>Rankin 101</center></h1>
